Display custom field values on application page, fix breaking (#569)
* Display custom field value

* Make sure labels can break if too long

--- a/app/assets/stylesheets/custom_bootstrap/custom_bootstrap.less
+++ b/app/assets/stylesheets/custom_bootstrap/custom_bootstrap.less
@@ -219,6 +219,9 @@ a:hover h1, a:hover h2, a:hover h3, a:hover h4 {
 input.form-control {
     font-family: @font-family-serif;
 }
+.control-label {
+    word-wrap: break-word;
+}
 
 
 .event-date {
@@ -230,6 +233,9 @@ input.form-control {
 		font-weight: 700;
 	}
 }
+
+
+@import "multi-select.css";
 
 .image-buttons .btn {
     height: 100px;
